<resources>
    <string name="app_name">Paw Patrol Build v1.0</string>
    <string name="catto_Symptoms">What is your cat feeling?</string>
    <string name="cat_cancer"> Cancer in cats is the leading cause of death among cats. It is caused by uncontrolled cell
     growth, and affects a wide range of cell types and organs in the body. Feline cancer initially manifests as a lump
    or bump on any parts of the body.</string>
    <string name="biopsy">
        A Biopsy is a surgical procedure in which a piece of tumor is removed for study and analysis by a pathologist.
        The pathologist`s report will provide important information such as the type of cancer and its characteristics.
    </string>
    <string name="laboratory">
        Combinations of survey, radiography, abdominal ultrasonography, serial clinical pathology tests, including urinalysis
        and urine cultures, and blood pressures should be performed to evaluate the severity of the disease.
    </string>
    <string name="cancerPrevention">
        One common type of cancer in cats is Skin Cancer. Limiting your cat`s exposure to blazing heat can prevent it
        from catching skin cancer.
    </string>
    <string name="cancerPrevention2">
        Breast cancer is also a common cancer for cats, but having your cat spayed can prevent it from getting this
        type of cancer.
    </string>
    <string name="kidneyDisease">
        Kidney disease is a disease that if left untreated, can cause death in cats. Kidney disease is where your cat`s
        kidney are not properly working. This means that their kidney cannot filter blood as it is supposed to, a number
        of problem will arise if this disease is ignored.
    </string>
    <string name="kidneyMed1">
        There are a number of kidney disease medications to give to your cat, but having a veterinarian check up on your
        cat first is the first thing to do if you think your cat is sick.
    </string>
    <string name="kidneyMed2">
        If you suspect that your cat have Kidney Disease, take it to your vet and run a number of test such as Urine Tests,
        Ultrasound, and biopsy (if your vet says it is necessary).
    </string>
    <string name="kidneyPrevention">
        A kidney diet is low in both phosphorus and protein, and is enriched with vitamin D and Omega-3 fatty acids.
        Remember that it is important ti introduce your cat to new foods gradually. Your vet can advise how to make this
        transition an easy one.
    </string>
    <string name="kidneyPrevention2">
        Giving your cat access to clean water can save it the trouble from getting kidney disease. And with water, your
        cat can urinate regularly, but not excessively.
    </string>
    <string name="FIV">
        Feline Immunodefficiency Virus is one of the most common and consequential diseases of cats around the world.
        In infected cats, FIV attacks the immune system, leaving the cat vulnerable to many other infections.
        <br>
            <br>
            Although Cats infected with FIC may appear normal for years, they eventually suffer from immune defficiency,
            which allows normally harmless bacteria, viruses, and fungi found in everyday environment to potentially cause
            severe illnesses.
            </br>
        </br>
    </string>
    <string name="FIVtreatment">
        Vaccination will always be a priority; before your cats even get FIV, it should be vaccinated. Although the vaccine
        will not protect all cats, your cat is better safe than sorry. Don`t take chances.
    </string>
    <string name="FIVtreatment2">
        The most effective treatment for this illness is a regular visit to your vet. Having you vet check up on your cat`s
        condition will help your cat recover, even bit-by-bit.
    </string>
    <string name="FIVtreatment3">
        Treating secondary infections with the help of your vet will prevent your cat`s condition to worsen. Secondary
        infections such as wounds and intestinal parasites should be controlled as to help your cat.
    </string>
    <string name="FIVtreatment4">
        A balanced diet will further improve your cat`s condition and health, it will invigorate your cat and make it happy.
    </string>
    <string name="FIVtreatment5">
        Because of FIV, your cat`s immune system will weaken; making your cat vulnerable to bacteria and diseases.
        Tumors might develop in your cat`s body. This can be prevented by doing regular check ups to the vet.
    </string>
    <string name="FIVPrevention">
        The primary mode of transmission for FIV is through bite wounds from infected cats. Sexual contact also carries
        a risk from infecting or getting infected from FIV. That`s why keeping your cat indoors or away from cats that
        you might think is infected is a good course of action.
    </string>
    <string name="FIVPrevention2">
        Cats tend to be aggressive when they are in heat. As such, they are prone to biting and scratching other cats.
        Either spay your cats to prevent this kind of aggression, or separate your cat in heat to prevent fighting among them.
    </string>
    <string name="FELV">
        Feline Leukemia Virus is one of the most common infectious diseases in cats, affecting between 2-3% of cats in the
        United States alone. Infection rates are significantly higher (up to 30%) in cats that are ill or otherwise at high risk.
    </string>
    <string name="felvTreatment">
        As always, you should always consult your cat`s condition to your vet. As they will tell you the necessary treatment
        for a cat suffering from FELV.
    </string>
    <string name="felvPrevent">
        The only sure way to protect cats from FeLV is to prevent their exposure to FeLV-infected cats. Keeping cats indoors,
        away from potentially infected cats is recommended. If outdoor access is allowed, provide supervision or place cats
        in a secure enclosure to prevent wandering and fighting.
    </string>
    <string name="Pancreatitis">
        Pancreatitis occasionally occurs in the cat. When it does, it is often accompanied by inflammation of the liver
        and intestine. This multi-organ inflammatory process is sometimes referred to as “triaditis”. This occurs because
        the inflammation associated with acute pancreatitis allows digestive enzymes to spill into the abdominal cavity.
    </string>
    <string name="pancreatitisTreatment">
        cats are good at hiding pain, so we need to always assume that pain is present and treat it appropriately
        (pain causes disease and prevents healing).
    </string>
    <string name="IVFluids">
        Intravenous fluids will be given to maintain normal fluid and electrolyte balance, and analgesics will be given
        to control the intense pain. Many cases will also require anti-inflammatory drugs, or other medication to control
        vomiting or diarrhea.
    </string>
    <string name="NSAIDs">
        non-steroidal anti-inflammatories (NSAIDs) to reduce inflammation and reduce pain (these are avoided if your
        cat is dehydrated or has kidney issues).
    </string>
    <string name="VitB">
        If the pancreas is unhealthy it doesn`t make a thing called "intrinsic factor" that is needed for vitamin 
        B12 absorption from the diet (deficiency can cause anaemia).
    </string>
    <string name="panPrevent">
        Avoid feeding your cat high-fat meals or table scraps and keep them at a healthy weight.
    </string>
    <string name="panPrevent2">
        Bring your cat in for regular wellness visits to check if your cat is developing health-related stuff that you
        don`t want to worsen.
    </string>
    <string name="hyperthyroidism">
        Hyperthyroidism results when the thyroid gland over-produces thyroid hormones. It’s the most common endocrine
        disease of cats older than 8-years-old. (An endocrine disease is a disease of the organs that make and secrete
        hormones.)
    </string>
    <string name="canine_parvo_string">
        This virus is a very dangerous and deadly disease for dogs. It is very contagious and attacks the gastrointestinal
        system, causing fever, vomiting, and severe, often bloody, diarrhea. It is spread by direct contact between dogs as
        well as by contaminated stool, surfaces, food bowls, collars, leashes, equipment, and the hands and clothing of people.
        Treating parvo can be very expensive and many dogs die from parvo despite intensive treatment.
    </string>
    <string name="parvoFirstAid">
        A dog infected with parvo will have diarrhea and will often take a poop or vomit from time-to-time. Keeping your dog
        hydrated will prevent it from further weakening.
    </string>
    <string name="parvoSecondAid">
        Cleaning after your dog is a must. Every time your dog takes a poop or vomit, sanitize the area where it did its business.
        This will also prevent your other dogs from contracting the disease.
    </string>
    <string name="parvoVet">
        Hospitalization is needed so medications and fluids can be given through injections. Pets with parvovirus have a very
        difficult time keeping oral medications. Because of this, home treatment is very difficult to achieve.
    </string>
    <string name="parvoPrevention">
        By keeping you place clean, you can prevent any might-be-lingering parvo bacteria in your home.
    </string>
    <string name="parvoPrevention2">
        When walking your dog, prevent them from sniffing or getting near a stool in the sidewalk. You don`t know
        whether the animal which excreted the stool is infected with the parvo or not.
    </string>
    <string name="parvoPrevention3">
        Regularly vaccinate your dog with parvovirus vaccination. This will prevent parvovirus from ever harming your dog.
    </string>
    <string name="featherDisease">
        A bacteria that belongs to taxonomic genus Circovirus. It attacks the feather follicles and the beak and claw
        matrices of the bird, causing progressive feather, claw and break malformation and necrosis.
    </string>
    <string name="featherFirstAid1">
        By providing your bird a place to clean itself, it can clean any bacteria that might cause feather disease. A clean
        bird have low chance of getting infected with feather disease.
    </string>
    <string name="featherFirstAid2">
        If by chance your bird refuses to take a bath on a dish of water, you can manually and gently clean your bird
        by using a soft brush (Toothbrush with soft bristles) and gently brush the body of your bird. Use a shampoo or
        soap that is prescribed by your vet.
    </string>
    <string name="featherDiseaseTreat">
        Unfortunately, there is no cure for Feather Disease. But by putting your bird in an intensive care and support,
        you can prolong its life for at least 1-2 years. Although it is not advised.
    </string>
    <string name="featherDiseaseTreat2">
        This option is only advisable if the condition is dire. This is also advised as to not prolong your bird`s pain
        and suffering. This will also prevent the disease from spreading to other birds.
    </string>
    <string name="featherPrevent">
        Strict hygiene should be followed in bird colonies. Especially controlling the dust. Also, regularly screen for PFBD.
        Consequently, if any bird is found infected, quarantine the bird and burn its nest box to prevent the disease from spreading.
    </string>
</resources>