<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dog_canine_parvo"
    android:orientation="vertical"
    android:background="@drawable/body_radius1">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:id="@+id/cAppbar"
        android:fitsSystemWindows="true"
        android:background="@color/transparent"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            android:background="@drawable/dog_parvo"
            >

            <ImageView
                android:id="@+id/dogDistemper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|top|right"
                android:layout_marginBottom="10dp"
                app:layout_collapseMode="parallax"
                android:src="@drawable/dog_parvo"
                >
            </ImageView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/ToolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:background="@drawable/body_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Canine Parvo"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/description"
                android:layout_below="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/canine_parvo_string"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="17sp"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

            <TextView
                android:id="@+id/First_Aid_Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="First Aid for Canine Parvo"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1. Keep your dog hydrated"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parvoFirstAid"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:textSize="17sp"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2. Keep your place clean"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parvoSecondAid"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:textSize="17sp"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

            <TextView
                android:id="@+id/suggested_Medication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Suggested Medication for Canine Parvo"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/VetClinic"
                android:layout_below="@+id/First_Aid_Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1. Bring your dog to a vet clinic"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parvoVet"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:textSize="17sp"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

            <TextView
                android:id="@+id/prevention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="How to prevent your dog from getting Canine Distemper"
                android:textSize="30sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1. Regularly sanitize your place"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parvoPrevention"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:textSize="17sp"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

            <TextView
                android:layout_below="@+id/First_Aid_Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2. Stop them from sniffing stool"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parvoPrevention2"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:textSize="17sp"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

            <TextView
                android:layout_below="@+id/First_Aid_Section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3. Vaccinate your dogs"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parvoPrevention3"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-condensed"
                android:textSize="17sp"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical|end"
                >
            </TextView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>